Add lots of admin

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,3 +2,12 @@
 ^renv\.lock$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^codecov\.yml$
+^LICENSE\.md$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^\.github$
+^\.vscode$
+^CITATION\.cff$
+^README\.Rmd$
