--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,31 @@
 Package: anivis
 Type: Package
-Title: What the Package Does (Title Case)
+Title: An R package for visualizing movement data and diagnostics
 Version: 0.1.0
-Authors@R: c(
+Authors@R: 
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
-      role = c("aut", "cre")
-    )
-  )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
-License: What license is it under?
+      "Mikkel", 
+      "Roald-Arbøl", 
+      role = c("aut", "cre"), 
+      email = "animovement.84w1m@passmail.com",
+      comment = c(ORCID = "0000-0002-9998-0058")
+      )
+Description: An R package for visualizing movement data and diagnostics.
+License: MIT + file LICENSE
+URL: http://animovement.dev/anivis/, https://github.com/animovement/anivis/
+BugReports: https://github.com/animovement/anivis/issues
 Encoding: UTF-8
 LazyData: true
+Imports:
+    rlang,
+    ggplot2,
+    patchwork,
+    marquee
+Suggests: 
+    knitr,
+    testthat (>= 3.0.0)
+Additional_repositories: https://animovement.r-universe.dev
+Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
+VignetteBuilder: knitr
